@@ -10,6 +10,9 @@ python-apt (0.7.9~exp3) experimental; urgency=low
       InitConfig() again to ensure that the config
       from the rootdir is read, not from the host
       (lp: #243550)
+  * apt/package.py:
+    - make sure to set the defaulttimeout back to the
+      original value (in getChangelog(), LP: #314212)
 
  --
 
